--- a/smart-exchange-movil/android/app/src/main/res/values/strings.xml
+++ b/smart-exchange-movil/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">smart-exchange-movil</string>
-    <string name="title_activity_main">smart-exchange-movil</string>
+    <string name="app_name">Lc Exchange</string>
+    <string name="title_activity_main">Lc Exchange</string>
     <string name="package_name">io.ionic.starter</string>
     <string name="custom_url_scheme">io.ionic.starter</string>
 </resources>
