--- a/smart-exchange-movil/android/app/src/main/res/values/strings.xml
+++ b/smart-exchange-movil/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">Lc Exchange</string>
     <string name="title_activity_main">Lc Exchange</string>
-    <string name="package_name">io.ionic.starter</string>
-    <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="package_name">com.lc.exchange.app</string>
+    <string name="custom_url_scheme">com.lc.exchange.app</string>
 </resources>
